--- a/index.html
+++ b/index.html
@@ -14,54 +14,19 @@
         <p class="subtitle">Birlikte geçirdiğimiz nice aylarımız nice yıllarımız olsun</p>
 
         <div class="months-grid">
-            <a href="ay.html?ay=ocak" class="month-card">
-                <div class="month-number">01</div>
-                <div class="month-name">Ocak</div>
-            </a>
-            <a href="ay.html?ay=subat" class="month-card">
-                <div class="month-number">02</div>
-                <div class="month-name">Şubat</div>
-            </a>
-            <a href="ay.html?ay=mart" class="month-card">
-                <div class="month-number">03</div>
-                <div class="month-name">Mart</div>
-            </a>
-            <a href="ay.html?ay=nisan" class="month-card">
-                <div class="month-number">04</div>
-                <div class="month-name">Nisan</div>
-            </a>
-            <a href="ay.html?ay=mayis" class="month-card">
-                <div class="month-number">05</div>
-                <div class="month-name">Mayıs</div>
-            </a>
-            <a href="ay.html?ay=haziran" class="month-card">
-                <div class="month-number">06</div>
-                <div class="month-name">Haziran</div>
-            </a>
-            <a href="ay.html?ay=temmuz" class="month-card">
-                <div class="month-number">07</div>
-                <div class="month-name">Temmuz</div>
-            </a>
-            <a href="ay.html?ay=agustos" class="month-card">
-                <div class="month-number">08</div>
-                <div class="month-name">Ağustos</div>
-            </a>
-            <a href="ay.html?ay=eylul" class="month-card">
-                <div class="month-number">09</div>
-                <div class="month-name">Eylül</div>
-            </a>
-            <a href="ay.html?ay=ekim" class="month-card">
-                <div class="month-number">10</div>
-                <div class="month-name">Ekim</div>
-            </a>
-            <a href="ay.html?ay=kasim" class="month-card">
-                <div class="month-number">11</div>
-                <div class="month-name">Kasım</div>
-            </a>
-            <a href="ay.html?ay=aralik" class="month-card">
-                <div class="month-number">12</div>
-                <div class="month-name">Aralık</div>
-            </a>
+            <!-- Ay linklerin aynen kalıyor -->
+            <a href="ay.html?ay=ocak" class="month-card"><div class="month-number">01</div><div class="month-name">Ocak</div></a>
+            <a href="ay.html?ay=subat" class="month-card"><div class="month-number">02</div><div class="month-name">Şubat</div></a>
+            <a href="ay.html?ay=mart" class="month-card"><div class="month-number">03</div><div class="month-name">Mart</div></a>
+            <a href="ay.html?ay=nisan" class="month-card"><div class="month-number">04</div><div class="month-name">Nisan</div></a>
+            <a href="ay.html?ay=mayis" class="month-card"><div class="month-number">05</div><div class="month-name">Mayıs</div></a>
+            <a href="ay.html?ay=haziran" class="month-card"><div class="month-number">06</div><div class="month-name">Haziran</div></a>
+            <a href="ay.html?ay=temmuz" class="month-card"><div class="month-number">07</div><div class="month-name">Temmuz</div></a>
+            <a href="ay.html?ay=agustos" class="month-card"><div class="month-number">08</div><div class="month-name">Ağustos</div></a>
+            <a href="ay.html?ay=eylul" class="month-card"><div class="month-number">09</div><div class="month-name">Eylül</div></a>
+            <a href="ay.html?ay=ekim" class="month-card"><div class="month-number">10</div><div class="month-name">Ekim</div></a>
+            <a href="ay.html?ay=kasim" class="month-card"><div class="month-number">11</div><div class="month-name">Kasım</div></a>
+            <a href="ay.html?ay=aralik" class="month-card"><div class="month-number">12</div><div class="month-name">Aralık</div></a>
         </div>
 
         <div style="text-align: center; margin-top: 40px; display: none;" id="continueButtonContainer">
@@ -70,7 +35,29 @@
     </div>
 
     <script src="hearts.js"></script>
-    <script src="checkVisited.js"></script>
-</body>
 
+    <!-- INLINE SCRIPT -->
+    <script>
+        const allMonths = [
+            'ocak','subat','mart','nisan','mayis','haziran',
+            'temmuz','agustos','eylul','ekim','kasim','aralik'
+        ];
+
+        document.addEventListener('DOMContentLoaded', function () {
+            checkAllMonthsVisited();
+        });
+
+        function checkAllMonthsVisited() {
+            const visitedMonths = JSON.parse(localStorage.getItem('visitedMonths') || '[]');
+            const allVisited = allMonths.every(month => visitedMonths.includes(month));
+            const continueButtonContainer = document.getElementById('continueButtonContainer');
+
+            if (allVisited && continueButtonContainer) {
+                continueButtonContainer.style.display = 'block';
+                continueButtonContainer.style.animation = 'fadeInUp 0.8s ease';
+            }
+        }
+    </script>
+
+</body>
 </html>
